// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker renders normal date-picker correctly 1`] = `
<LocaleReceiver
  isRange={false}
  value="2018/8/5"
/>
`;

exports[`DatePicker renders normal range time date-picker correctly 1`] = `
<LocaleReceiver
  format="yyyy-MM-dd hh:mm:ss"
  isRange={true}
  showTime={true}
  value={
    Array [
      "2018/8/5 00:00:00",
      "2018/8/6 00:00:00",
    ]
  }
/>
`;

exports[`DatePicker renders normal time date-picker correctly 1`] = `
<LocaleReceiver
  format="yyyy-MM-dd hh:mm:ss"
  isRange={false}
  showTime={true}
  value="2018/8/5 00:00:00"
/>
`;
